# NEBULA_SIMPLE_PHYSICS_NUMBER

./: .gitignore  CMakeLists.txt  README.md  README_RSNA.md  SIMPLE_PHYSICS_NUMBERS01_NEW.exp  SIMPLE_PHYSICS_NUMBERS01_NEW.lib  auto_finetune.ps1  auto_finetune_best.json  check_env.bat  check_rsna_setup.bat  check_rsna_setup_v2.bat  compile.bat  compile_cuda.cmd  compile_main01.bat  compile_main03.bat  create_train_mips.py  generate_submission.py  main01.cu  monitor_processing.py  process_large_dataset.bat  processing_progress.pkl  run_complete_rsna.bat  run_full_rsna_workflow.bat  run_predict_only.ps1  run_quick_test.bat  run_quick_test.ps1  run_rsna_infer.bat  run_rsna_train_full.bat  run_train_full.ps1  setup_rsna.bat
src/: infer.cpp  train.cpp
src/data/: mnist_loader.cpp  mnist_loader.hpp
src/optical/: optical_network.cpp  optical_network.hpp
src/tools/: generate_submission.cpp
tests/: test_loader.cpp
